traefik/src/localhost-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-localhost-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
    - name: websecure
      port: 443
      protocol: HTTPS
      tls:
        certificateRef:
          name: traefik-localhost-tls
          namespace: default
    - name: grpc
      port: 50051
      protocol: GRPC
      tls:
        certificateRef:
          name: traefik-localhost-tls
          namespace: default
  hostname: ryanguild.localhost
  addresses:
    - type: Hostname
      value: ryanguild.localhost
