traefik/src/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-http-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
  hostnames:
    - traefik.ryanguild.localhost
  rules:
    - backendRefs:
        - kind: TraefikService
          name: api@internal
          port: 8000
          namespace: default
      matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
